# quantized-gemm

./: .gitignore  README.md  pyproject.toml
kernels/: CMakeLists.txt  benchmark.sh  theoretical_peak_analysis.ipynb
kernels/A8-W4-GGML/: CMakeLists.txt  README.md
kernels/A8-W4-GGML/assembly_code_analysis/: lib.h  no_cache-with_precomputation_of_sum.c  no_cache-with_precomputation_of_sum.s  test.c  test.s
kernels/A8-W4-GGML/gemm/: gemm-A80W40-ggml-aarch64-repack.cpp  gemm-A80W40-ggml.cpp  gemm-A80W40-ink_repack_scheme.cpp  gemm-A80W40-llama-aarch64-repack-dynamic_openmp_scheme-better_kernel.cpp  gemm-A80W40-llama-aarch64-repack-dynamic_openmp_scheme-worse_kernel.cpp  gemm-A81W41-ggml.cpp  gemm-A81W41-ggml_GGML_TYPE_Q4_1_ink.cpp  gemm-A81W41-ink_repack_scheme-use_fp16-imp1.cpp  gemm-A81W41-ink_repack_scheme-use_fp16-imp2.cpp  gemm-A81W41-ink_repack_scheme-use_fp16-imp3_use_malloc.cpp  gemm-A81W41-ink_repack_scheme.cpp
kernels/A8-W4-GGML/gemv/: gemv-A80W40-ggml-aarch64-repack.cpp  gemv-A80W40-ggml.cpp  gemv-A80W40-ggml_ink.cpp  gemv-A80W40-ink_repack_scheme-use_fp16-imp1.cpp  gemv-A80W40-ink_repack_scheme-use_fp16-imp2.cpp  gemv-A80W40-ink_repack_scheme.cpp  gemv-A81W41-ggml_impl_1.cpp  gemv-A81W41-ggml_impl_2.cpp  gemv-A81W41-ink_repack_scheme-use_fp16-imp1.cpp  gemv-A81W41-ink_repack_scheme-use_fp16-imp2.cpp  gemv-A81W41-ink_repack_scheme.cpp  gemv_use_ggml.cpp
kernels/A80-W40-simd_aware_weight_packing/: README.md
kernels/A80-W40-simd_aware_weight_packing-repack/: CMakeLists.txt  README.md
kernels/A80-W40-simd_aware_weight_packing-repack/assembly_analysis/: baseline.c  baseline.s  lib.h  test
kernels/A80-W40-simd_aware_weight_packing-repack/gemm/: gemm-baseline-mulsum_i8_unroll_by_2.cpp  gemm-baseline.cpp  gemm-blocking.cpp  gemm-test.cpp  gemm-unroll_i_by_16.cpp  gemm-unroll_i_by_2.cpp  gemm-unroll_i_by_2_j_by_4.cpp  gemm-unroll_i_by_4.cpp  gemm-unroll_i_by_4_j_by_2.cpp  gemm-unroll_i_by_8.cpp  gemm-unroll_i_j_by_2-deal_with_remainder-210gflops.cpp  gemm-unroll_i_j_by_2.cpp  gemm-unroll_i_j_by_4.cpp  gemm-unroll_j_by_2.cpp  gemm-unroll_j_by_4.cpp  gemm-worse_performance-unroll_j_by_8.cpp
kernels/A80-W40-simd_aware_weight_packing-repack/gemv/: gemv-v1.cpp  test
kernels/A80-W40-simd_aware_weight_packing/assembly_analysis/: llvm_report_2x2kernel_innermost_loop.md  llvm_report_baseline_innermost_loop-1.md  llvm_report_baseline_innermost_loop.md  llvm_report_matmul_kernel_innermost_loop-1.md  llvm_report_matmul_kernel_innermost_loop.md  matmul-innermost_loop.s  matmul.c  matmul.s  matmul_cache-non_rank1-2x2_micro_kernel-innermost_loop.s  matmul_cache-non_rank1-2x2_micro_kernel_v2.c  matmul_cache-non_rank1-4x4_micro_kernel.c  matmul_cache-non_rank1-4x4_micro_kernel.s  matmul_cache-non_rank1-baseline.c  tmp3.c  tmp3.s
kernels/A80-W40-simd_aware_weight_packing/benchmark_results/: matmul_benchmark_20250406_150709.csv  matmul_benchmark_20250406_191752.csv  matmul_benchmark_20250406_192214.csv  matmul_benchmark_20250406_193002.csv  matmul_benchmark_20250406_194152.csv  matmul_benchmark_20250406_203717.csv  matmul_benchmark_20250411_115617.csv  matmul_benchmark_20250411_115936.csv  matmul_benchmark_20250411_120034.csv  matmul_benchmark_20250411_120948.csv  matmul_benchmark_20250411_121143.csv  matmul_benchmark_20250411_121221.csv  matmul_benchmark_20250411_121316.csv  matmul_benchmark_20250411_121411.csv  matmul_benchmark_20250411_121512.csv  (+8 more)
kernels/A81-W41-simd_aware_weight_packing/: README.md
kernels/A81-W41-simd_aware_weight_packing-repack/: README.md
kernels/Afp32-Wfp32-BLIS_implementation/: README.md
kernels/include/: lib.h
kernels/others/: theoretical_peak_analysis-backup.ipynb  theoretical_peak_analysis-backup_2.ipynb  theoretical_peak_analysis-backup_3.ipynb
(+355 files in other folders)
